[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tool_and_weapon/sword.png" type="Texture" id=1]
[ext_resource path="res://weapon_and_tool/ShortSword.gd" type="Script" id=2]
[ext_resource path="res://assets/sound_effect/actor/sword_glave_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound_effect/actor/swords_hit.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99988
height = 48.0002

[sub_resource type="Animation" id=2]
resource_name = "slash_rounnd"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 0.258816, 3.86374, 0.757859, 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0, 40.0, 0.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dealDamage"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sound_attack_slave:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "slash_stab"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 2.21914, 0.210224, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 25, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dealDamage"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sound_attack_stab:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}

[node name="shortSword" type="Area2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 56, 0 )
rotation = 1.5708
scale = Vector2( 0.231928, 0.225 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 56, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="slash_atk" type="AnimationPlayer" parent="."]
anims/slash_rounnd = SubResource( 2 )
anims/slash_stab = SubResource( 3 )

[node name="sound_attack_slave" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="sound_attack_stab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_shortSword_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_shortSword_body_exited"]
